Change ids type.